# Rito-Bank-Agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agent-frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
agent-frontend/src/: App.tsx  index.css
agent-frontend/src/components/: Chat.tsx
app/: main.py
app/src/config/: logging_config.py
app/src/core/: app_state.py
app/src/data/: clients.csv  increase_limits_request.csv  score_limit.csv
app/src/graph/: flow.py  nodes.py  state.py
app/src/graph/nodes/: __init__.py  credit.py  currency.py  interview.py  supervisor.py  triage.py
app/src/llm/: base_llm.py  credit_llm.py  currency_llm.py  interview_llm.py  llm.py  prompts.py  tools.py  triage_llm.py
app/src/models/: AgentStateModel.py
app/src/routers/: chat_router.py  routers.py
app/src/services/: credit_service.py  model_service.py  user_service.py
src/app/: main.py
