[project]
name = "bank-agent-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.6",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "pandas>=2.3.3",
    "router>=0.1",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
]
